--- a/packages/lime-system/files/etc/config/lime.example
+++ b/packages/lime-system/files/etc/config/lime.example
@@ -14,72 +14,69 @@
 ### System options
 
 config lime system
-	option hostname 'LiMeNode-%M4%M5%M6'                                   # Parametrizable with %Mn
-
+	option hostname 'LiMe-%M4%M5%M6'                         # Parametrizable with %Mn
 
 ### Network general option
 
 config lime network
-#	option primary_interface eth0                                          # The mac address of this device will be used in different places
-#	option bmx6_over_batman false                                          # Disables Bmx6 meshing on top of batman
-	option main_ipv4_address '192.0.2.0/24'                                # Here you have 4 possibilities: set a static IP and the subnet, like '192.0.2.1/16'; parametrize with %Mn and %Nn, and set the subnet, like '192.%N1.%M5.%M6/16'; set a whole network address (so not a specific IP) for getting the IP autocompleted in that network with bits from MAC address, this works also with netmasks other than /24 or /16, like '192.0.128.0/17' (but not valid network addresses, for example '192.0.128.0/16' or '192.0.129.0/17', won't get parametrized); set two different parameters, the first for subnet and the second for IP parametrization, like '192.0.128.0/16/17', this results in /16 subnet but IP parametrized in a /17 range.
-	option main_ipv6_address '2001:db8::%M5:%M6/64'                        # Parametrizable in the same way as main_ipv4_address. If used, the IP autocompletion will fill maximum the last 24 bits, so specifying an IP autocompletion range bigger than /104 is not useful.
-	list protocols adhoc                                                   # List of protocols configured by LiMe, some of these require the relative package "lime-proto-...". Note that if you set here some protocols, you overwrite the *whole* list of protocols set in /etc/config/lime-defaults
+#	option primary_interface eth0                            # The mac address of this device will be used in different places
+#	option bmx6_over_batman false                            # Disables Bmx6 meshing on top of batman
+	option main_ipv4_address '10.%N1.0.0/16'                 # Here you have 4 possibilities: set a static IP and the subnet, like '192.0.2.1/16'; parametrize with %Mn and %Nn, and set the subnet, like '192.%N1.%M5.%M6/16'; set a whole network address (so not a specific IP) for getting the IP autocompleted in that network with bits from MAC address, this works also with netmasks other than /24 or /16, like '192.0.128.0/17' (but not valid network addresses, for example '192.0.128.0/16' or '192.0.129.0/17', won't get parametrized); set two different parameters, the first for subnet and the second for IP parametrization, like '192.0.128.0/16/17', this results in /16 subnet but IP parametrized in a /17 range.
+	option main_ipv6_address '2a00:1508:0a%N1:%N200::/64'    # Parametrizable in the same way as main_ipv4_address. If used, the IP autocompletion will fill maximum the last 24 bits, so specifying an IP autocompletion range bigger than /104 is not useful.
+	list protocols adhoc                                     # List of protocols configured by LiMe, some of these require the relative package "lime-proto-...". Note that if you set here some protocols, you overwrite the *whole* list of protocols set in /etc/config/lime-defaults
 	list protocols lan
 	list protocols anygw
-	list protocols batadv:%N1                                              # Parametrizable with %Nn (which depends from ap_ssid), note that this will range between 16 and 272
+	list protocols batadv:%N1                                # Parametrizable with %Nn (which depends from ap_ssid), note that this will range between 16 and 272
 	list protocols bmx6:13
 #	list protocols olsr:14
 #	list protocols olsr6:15
 #	list protocols olsr2:16
-#	list resolvers 8.8.8.8                                                 # DNS servers node will use
-#	list resolvers 2001:4860:4860::8844
-
+#	list resolvers 4.2.2.2   # b.resolvers.Level3.net        # DNS servers node will use
+#	list resolvers 141.1.1.1 # cns1.cw.net
+#	list resolvers 2001:470:20::2 # ordns.he.net
 
 ### WiFi general options
 
 config lime wifi
 #	option country 'ES'
 #	option channel_2ghz '11'
-#	option channel_5ghz '48'                                               # Check for allowed channels on https://en.wikipedia.org/wiki/List_of_WLAN_channels#5.C2.A0GHz_.28802.11a.2Fh.2Fj.2Fn.2Fac.29.5B16.5D
+#	option channel_5ghz '48'                                 # Check for allowed channels on https://en.wikipedia.org/wiki/List_of_WLAN_channels#5.C2.A0GHz_.28802.11a.2Fh.2Fj.2Fn.2Fac.29.5B17.5D
 #	option htmode_2ghz 'HT20'
 #	option htmode_5ghz 'HT40'
 #	list modes 'ap'
 #	list modes 'apname'
 #	list modes 'adhoc'
-	option ap_ssid 'libre-mesh.org'
-	option apname_ssid '%H'
-#	option adhoc_ssid '%H'                                                 # Parametrizable with %M, %H
+	option ap_ssid 'Libre-Mesh.org'
+	option apname_ssid 'Libre-Mesh.org/%H'
+#	option adhoc_ssid 'LiMe'                                 # Parametrizable with %M, %H
 #	option adhoc_bssid 'ca:fe:00:c0:ff:ee'
 #	option adhoc_mcast_rate_2ghz '24000'
 #	option adhoc_mcast_rate_5ghz '6000'
-#	option mesh_mesh_fwding '0'                                            # Settings needed only for 802.11s
+#	option mesh_mesh_fwding '0'                              # Settings needed only for 802.11s
 #	option mesh_mesh_id 'LiMe'
-
 
 ### WiFi interface specific options ( override general option )
 
 #config wifi radio11
 #	list modes 'adhoc'
-#	option channel_2ghz '1'
+#	option channel_2ghz '11'
 #	option channel_5ghz '48'
-#	option adhoc_mcast_rate '6000'
-#	option adhoc_ssid 'libre-mesh'
+#	option adhoc_mcast_rate_2ghz '24000'
+#	option adhoc_mcast_rate_5ghz '6000'
+#	option adhoc_ssid 'LiMe'
 #	option adhoc_bssid 'ca:fe:00:c0:ff:ee'
 
 #config wifi radio12
-#	list modes 'manual'                                                    # If you use manual protocol you must not specify other protocol, or your configuration will be broken!
-
+#	list modes 'manual'                                      # If you use manual protocol you must not specify other protocol, or your configuration will be broken!
 
 ### Network interface specific options ( override general option )
 ### Available protocols: bmx6, batadv, olsr, olsr6, wan, lan, manual
 ### proto:vlan_number works too ( something like bmx6:13 is supported )
 ### If you use manual do not specify other protocols, may result in an unpredictable behavior/configuration (likely you loose connection to the node)
 
-#config net port5                                                           # Do not put any "." in the section name
-#	option linux_name 'eth1.5'                                          # Put here the actual name of the interface
-#	list protocols 'wan'                                                # Some of these protocols require the relative package "lime-proto-..."
-
+#config net port5                                                # Do not put any "." in the section name
+#	option linux_name 'eth1.5'                               # Put here the actual name of the interface
+#	list protocols 'wan'                                     # Some of these protocols require the relative package "lime-proto-..."
 
 ### Ground routing specific sections
 ### One section for each ground routing link
@@ -88,11 +85,11 @@ config lime wifi
 ### For a detailed description have a look at http://libre-mesh.org/projects/libre-mesh/wiki/Ground_routing
 
 #config hwd_gr link1
-#	option net_dev 'eth0'                                               # Plain ethernet device on top of which 802.1q vlan will be constructed. In case of doubts rely on wiki.openwrt.org
-#	option vlan '5'                                                     # Vlan id to use for this ground routing link, use little one because cheap switch doesn't supports big ids, this will be used also as 802.1q vid
-#	option switch_dev 'switch0'                                         # These options regarding switch need to be set only if your ethernet device is connected to a switch chip. If the switch exists you can read its name (like switch0) in /etc/config/network file
-#	option switch_cpu_port '0'                                          # Refer to switch port map of your device on wiki.openwrt.org to know CPU port index
-#	list switch_ports '4'                                               # List switch ports on which you want the vlan being passed, refer to wiki.openwrt.org for correspondence with physical ports
+#	option net_dev 'eth0'                                    # Plain ethernet device on top of which 802.1q vlan will be constructed. In case of doubts rely on wiki.openwrt.org
+#	option vlan '5'                                          # Vlan id to use for this ground routing link, use little one because cheap switch doesn't supports big ids, this will be used also as 802.1q vid
+#	option switch_dev 'switch0'                              # These options regarding switch need to be set only if your ethernet device is connected to a switch chip. If the switch exists you can read its name (like switch0) in /etc/config/network file
+#	option switch_cpu_port '0'                               # Refer to switch port map of your device on wiki.openwrt.org to know CPU port index
+#	list switch_ports '4'                                    # List switch ports on which you want the vlan being passed, refer to wiki.openwrt.org for correspondence with physical ports
 
 ### Proto BGP specific sections
 ### One section for each BGP peer
